# swagger-output.json
@@ -66,11 +66,11 @@
               "properties": {
                 "email": {
                   "type": "string",
-                  "example": "test@gmail.com"
+                  "example": "newhulu@gmail.com"
                 },
                 "password": {
                   "type": "string",
-                  "example": "Abc123456"
+                  "example": "Aa123456"
                 }
               },
               "required": [
@@ -105,19 +105,19 @@
               "properties": {
                 "name": {
                   "type": "string",
-                  "example": "shuantisagenius"
+                  "example": "祺貴人"
                 },
                 "email": {
                   "type": "string",
-                  "example": "shuantt@gmail.com"
+                  "example": "kiki@gmail.com"
                 },
                 "password": {
                   "type": "string",
-                  "example": "A123456789"
+                  "example": "Aa123456"
                 },
                 "confirmPassword": {
                   "type": "string",
-                  "example": "A123456789"
+                  "example": "Aa123456"
                 }
               },
               "required": [
@@ -217,11 +217,11 @@
               "properties": {
                 "name": {
                   "type": "string",
-                  "example": "shuantt"
+                  "example": "換個名字"
                 },
                 "photo": {
                   "type": "string",
-                  "example": "url"
+                  "example": "https://metawall.com/image1"
                 },
                 "gender": {
                   "type": "string",
@@ -264,11 +264,16 @@
               "properties": {
                 "password": {
                   "type": "string",
-                  "example": "123456"
+                  "example": "Aa123456"
+                },
+                "confirmPassword": {
+                  "type": "string",
+                  "example": "Aa123456"
                 }
               },
               "required": [
-                "password"
+                "password",
+                "confirmPassword"
               ]
             }
           }
@@ -501,11 +506,11 @@
               "properties": {
                 "content": {
                   "type": "string",
-                  "example": "這是一篇測試文章"
+                  "example": "哈囉，你好嗎~~~"
                 },
                 "image": {
                   "type": "string",
-                  "example": "img-url"
+                  "example": "https://metawall/image2"
                 }
               },
               "required": [
@@ -645,6 +650,10 @@
                 "content": {
                   "type": "string",
                   "example": "小智是個大渣男!"
+                },
+                "image": {
+                  "type": "string",
+                  "example": "https://metawall/image2"
                 }
               },
               "required": [
@@ -810,7 +819,8 @@
         "tags": [
           "Upload"
         ],
-        "description": "上傳圖片",
+        "summary": "上傳單張圖片",
+        "description": "上傳單張圖片",
         "parameters": [
           {
             "name": "file",
